@@ -496,7 +496,7 @@ ppm_flags( const char *filename )
 
 	flags = 0;
 	if( isppmmmap( filename ) )
-		flags |= VIPS_FORMAT_FLAG_PARTIAL;
+		flags |= VIPS_FORMAT_PARTIAL;
 
 	return( flags );
 }
